--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Click==7.0
 colorama==0.4.1
 Flask==1.0.3
 gunicorn==19.9.0
+heroku==0.1.4
 idna==2.8
 isort==4.3.21
 itsdangerous==1.1.0
@@ -15,6 +16,7 @@ mccabe==0.6.1
 PyJWT==1.7.1
 pylint==2.3.1
 PySocks==1.7.0
+python-dateutil==1.5
 pytz==2019.1
 requests==2.22.0
 six==1.12.0
